--- a/portfolio/WpfPortfolio/WpfSmartHomeMonitoringApp/packages.config
+++ b/portfolio/WpfPortfolio/WpfSmartHomeMonitoringApp/packages.config
@@ -3,6 +3,8 @@
   <package id="Caliburn.Micro" version="4.0.173" targetFramework="net472" />
   <package id="Caliburn.Micro.Core" version="4.0.173" targetFramework="net472" />
   <package id="ControlzEx" version="4.4.0" targetFramework="net472" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="M2Mqtt" version="4.3.0.0" targetFramework="net472" />
   <package id="MahApps.Metro" version="2.4.9" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="4.11.0" targetFramework="net472" />
