--- a/portfolio/WpfPortfolio/DummyDataApp/packages.config
+++ b/portfolio/WpfPortfolio/DummyDataApp/packages.config
@@ -3,4 +3,7 @@
   <package id="Bogus" version="34.0.2" targetFramework="net472" />
   <package id="M2Mqtt" version="4.3.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.2-beta1" targetFramework="net472" />
+  <package id="OxyPlot.Core" version="2.1.0" targetFramework="net472" />
+  <package id="OxyPlot.Wpf" version="2.1.0" targetFramework="net472" />
+  <package id="OxyPlot.Wpf.Shared" version="2.1.0" targetFramework="net472" />
 </packages>
